[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies_Horde.gd" type="Script" id=1]
[ext_resource path="res://resources/Loons_boss/enemies_horde.wav" type="AudioStream" id=2]

[node name="Enemies_Horde" type="Node2D"]
script = ExtResource( 1 )

[node name="warning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 5.393
pitch_scale = 1.42

[node name="Spawn_Points" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 9 )

[node name="Position2D2" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 25 )

[node name="Position2D3" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 40 )

[node name="Position2D4" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 56 )

[node name="Position2D5" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 72 )

[node name="Position2D6" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 89 )

[node name="Position2D7" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 105 )

[node name="Position2D8" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 121 )

[node name="Position2D9" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 137 )

[node name="Position2D10" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 153 )

[node name="Position2D11" type="Position2D" parent="Spawn_Points"]
position = Vector2( 0, 169 )

[node name="Next_attack" type="Timer" parent="."]
one_shot = true

[node name="turn_off_sound_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Next_attack" to="." method="_on_Next_attack_timeout"]
[connection signal="timeout" from="turn_off_sound_timer" to="." method="_on_turn_off_sound_timer_timeout"]
